--- a/style.css
+++ b/style.css
@@ -81,3 +81,36 @@ button {
     margin-top: 10px;
     border: none;
 }
+
+.section-gallery {
+    background-color: #f9faf8;
+    text-align: center;
+}
+
+.section-gallery h2 {
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
+}
+
+.gallery {
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+
+.gallery-entry .square {
+    border: 4px solid #3882f6;
+    border-radius: 10px;
+    width: 150px;
+    height: 150px;
+}
+
+.caption {
+    font-size: 16px;
+    color: #606975;
+    line-height: 1.2;
+    text-align: center;
+    width: 150px;
+}
