--- a/style.css
+++ b/style.css
@@ -114,3 +114,25 @@ button {
     text-align: center;
     width: 150px;
 }
+
+.section-quote {
+    background-color: #e5e7eb;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.quote {
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+    color: #1f2937;
+    margin-bottom: 10px;
+}
+
+.signature {
+    text-align: right;
+    padding-right: 50px;
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 0px;
+}
