--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ button {
 .section-gallery {
     background-color: #f9faf8;
     text-align: center;
+    padding-bottom: 100px;
 }
 
 .section-gallery h2 {
